--- a/ggally.Rmd
+++ b/ggally.Rmd
@@ -10,17 +10,57 @@ output:
 # `ggcorr` to plot correlation matrices
 Correlation matrices show correlation coefficients between many continuous variables. These matrices are created using the `cor` function. The `ggcorr` function from the `ggally` package to plot correlation matrices.
 
+Usage  
+
+`ggcorr(data, method = "pairwise", palette = "RdYlGn", ...)`  
+
+`data` data matrix  
+`method` character string giving a method for computing covariances. Defaults to "pairwise".  
+`palette` ColorBrewer palette to be used for correlation coefficients. Defaults to "RdYlGn".  
+`geom` geom object to use. Accepts either tile (the default) or circle, to plot proportionally scaled circles.
+
 ```{r, message=FALSE, warning=FALSE}
 #install.packages("GGally")
 library(GGally)
 library(ggplot2)
 library(dplyr)
 library(tidyr)
+library(rdryad)
 
-iris <- tbl_df(iris)
-glimpse(iris)
+# retrieve Analis trait data from Kolbe et al. 2011, Evolution 65(12): 3608-3624.
+# http://datadryad.org/handle/10255/dryad.34389?show=full
+anolis.data <- download_url("10255/dryad.34389")
+anolis.traits <- dryad_getfile(anolis.data)
+#is.data.frame(anolis.traits)
 
-select(iris, -Species) %>%
+anolis.traits <- tbl_df(anolis.traits)
+glimpse(anolis.traits)
+
+select(anolis.traits, -(Species:Ecomorph)) %>%
 ggcorr()
+
+# ggcorr(anolis.traits[, -c(1, 2)])
+# ggcorr(anolis.traits[, 3:17])
+```
+
+## Correlation methods
+```{r, eval=FALSE}
+# Pearson correlation coefficients, using pairwise observations (default method)
+ggcorr(anolis.traits[, 3:17], method=c("pairwise", "pearson"))
+
+# Pearson correlation coefficients, using all observations
+ggcorr(anolis.traits[, 3:17], method=c("everything", "pearson"))
+
+# Kendall correlation coefficients, using complete observations
+ggcorr(anolis.traits[, 3:17], method=c("complete", "kendall"))
+
+# Spearman correlation coefficients, using strictly complete observations
+ggcorr(anolis.traits[, 3:17], method=c("all.obs", "spearman"))
+```
+
+## Plotting parameters
+```{r}
+# nbreaks specifies how many breaks should be contained in the color scale
+ggcorr(anolis.traits[, 3:17], nbreaks=5)
 
 ```
