--- a/ggally.Rmd
+++ b/ggally.Rmd
@@ -25,42 +25,76 @@ library(GGally)
 library(ggplot2)
 library(dplyr)
 library(tidyr)
-library(rdryad)
 
+# library(rdryad)
 # retrieve Analis trait data from Kolbe et al. 2011, Evolution 65(12): 3608-3624.
 # http://datadryad.org/handle/10255/dryad.34389?show=full
-anolis.data <- download_url("10255/dryad.34389")
-anolis.traits <- dryad_getfile(anolis.data)
-#is.data.frame(anolis.traits)
+# anolis.data <- download_url("10255/dryad.34389")
+# anolis.traits <- dryad_getfile(anolis.data)
+# anolis.traits <- tbl_df(anolis.traits)
+# glimpse(anolis.traits)
 
-anolis.traits <- tbl_df(anolis.traits)
-glimpse(anolis.traits)
+library(RCurl)
+# http://datadryad.org/resource/doi:10.5061/dryad.qk461
+# Jønsson et al. 2015, Evolution 69(4): 879–889
+bird.data.url <- getURL("https://raw.githubusercontent.com/flopezo/notes/master/Jonsson_et_al_2015_data_morphospace.csv")
+bird.data <- read.csv(text=bird.data.url)
+bird.data <- tbl_df(bird.data)
+glimpse(bird.data)
 
-select(anolis.traits, -(Species:Ecomorph)) %>%
-ggcorr()
+select(bird.data, -(Species:Cladename)) %>%
+  ggcorr(hjust=0.7, vjust=0.8, size=5, layout.exp=1)
 
-# ggcorr(anolis.traits[, -c(1, 2)])
-# ggcorr(anolis.traits[, 3:17])
+#ggcorr(bird.data[, -c(1, 2)])
+#ggcorr(bird.data[, 3:9])
+
+# ggcorr accepts a correlation matrix through the cor_matrix argument
+# first argument must be set to NULL
 ```
 
 ## Correlation methods
 ```{r, eval=FALSE}
 # Pearson correlation coefficients, using pairwise observations (default method)
-ggcorr(anolis.traits[, 3:17], method=c("pairwise", "pearson"))
+method=c("pairwise", "pearson")
 
 # Pearson correlation coefficients, using all observations
-ggcorr(anolis.traits[, 3:17], method=c("everything", "pearson"))
+method=c("everything", "pearson")
 
 # Kendall correlation coefficients, using complete observations
-ggcorr(anolis.traits[, 3:17], method=c("complete", "kendall"))
+method=c("complete", "kendall")
 
 # Spearman correlation coefficients, using strictly complete observations
-ggcorr(anolis.traits[, 3:17], method=c("all.obs", "spearman"))
+method=c("all.obs", "spearman")
 ```
 
 ## Plotting parameters
+### Change color palette and geometry
 ```{r}
 # nbreaks specifies how many breaks should be contained in the color scale
-ggcorr(anolis.traits[, 3:17], nbreaks=5)
+ggcorr(bird.data[, -c(1, 2)], nbreaks=5, 
+  hjust=0.9, size=5, palette="Set3", layout.exp=1)
 
+ggcorr(bird.data[, -c(1, 2)], nbreaks=5, hjust=0.7, vjust=1.0, size=5, 
+  palette="Set2", label=TRUE, label_size=3, label_color="white", layout.exp=1)
+
+```
+
+```{r}
+library(RCurl)
+data.url <- getURL("https://raw.githubusercontent.com/flopezo/notes/master/Jonsson_et_al_2015_data_morphospace.csv")
+bird.data <- read.csv(text=data.url)
+bird.data <- tbl_df(bird.data)
+glimpse(bird.data)
+
+ggcorr(bird.data[,-c(1, 2)], hjust=0.7, size=5, 
+  palette="Set2", label=TRUE, label_size=3, label_color="white", layout.exp=1)
+```
+
+```{r}
+head(ggcorr(bird.data[, 3:9])$data, 5)
+ggcorr(bird.data[, 3:9], geom="blank", label=TRUE, hjust=0.75) + 
+  geom_point(size=10, aes(color=coefficient > 0, 
+    alpha=abs(coefficient) > 0.5)) +
+  scale_alpha_manual(values = c("TRUE"=0.25, "FALSE"=0)) +
+  guides(color=FALSE, alpha=FALSE)
 ```
